@@ -31,10 +31,6 @@ I: relations source: build-depends-without-arch-dep findutils
 I: relations source: build-depends-without-arch-dep foo
 I: relations source: build-depends-without-arch-dep libc6-dev
 I: relations source: build-depends-without-arch-dep mail-transport-agent
-I: relations-multiple-libs: unknown-field-in-control bugs
-I: relations-multiple-libs: unknown-field-in-control origin
-I: relations: unknown-field-in-control bugs
-I: relations: unknown-field-in-control origin
 W: relations source: ancient-standards-version 3.1.1 (current is 3.7.3)
 W: relations source: bad-homepage lintian.debian.org
 W: relations source: package-has-a-duplicate-build-relation foo (= 3) [!amd64 !i386], foo (<< 4) [!amd64 !i386]
