@@ -1,5 +1,9 @@
 lintian (1.23.43) UNRELEASED; urgency=low
 
+  * checks/common_data.pm:
+    + [RA] Add Bugs, Origin, and Breaks to known binary and udeb fields
+      and Bugs to known source fields, matching current dpkg.  Thanks,
+      Raphaël Hertzog.  (Closes: #459787)
   * checks/debhelper:
     + [RA] CDBS now defaults to a debhelper compatibility level of V5.
   * checks/fields:
@@ -20,7 +24,7 @@ lintian (1.23.43) UNRELEASED; urgency=low
     + [RA] Add a spelling correction for PostgreSQL and lots of new
       capitalization corrections after a debian-devel thread.
 
- -- Russ Allbery <rra@debian.org>  Mon, 21 Jan 2008 17:25:43 -0800
+ -- Russ Allbery <rra@debian.org>  Mon, 21 Jan 2008 17:36:01 -0800
 
 lintian (1.23.42) unstable; urgency=low
 
